# mfd-devcon

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: manual_release.yml  pull_requests.yml
examples/: simple_example.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  index.rst
tests/unit/test_mfd_devcon/: test_mfd_devcon.py
